@@ -2,8 +2,6 @@ package com.automate.CodeReview.Service;
 
 import com.automate.CodeReview.Models.ScanLogModel;
 import com.automate.CodeReview.Models.ScanModel;
-import com.automate.CodeReview.Models.ScanRequest;
-import com.automate.CodeReview.dto.LogPayload;
 import com.automate.CodeReview.entity.ProjectsEntity;
 import com.automate.CodeReview.entity.ScansEntity;
 import com.automate.CodeReview.repository.ProjectsRepository;
@@ -33,9 +31,7 @@ import java.util.stream.Collectors;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.*;
 import java.time.Duration;
-import java.util.*;
 import java.util.concurrent.*;
 import java.util.stream.Stream;
 
@@ -63,12 +59,6 @@ public class ScanService {
     // ส่วนของ startScan
     @Value("${app.sonar.token}")
     private String sonarToken;
-
-    @Value("${log-service.base-url}")
-    private String logServiceUrl;
-
-    @Value("${spring.application.name:unknown-service}")
-    private String appName;
 
     @Value("${scan.logs.directory:C:/scan-logs}")
     private String scanLogsDirectory;
@@ -123,9 +113,15 @@ public class ScanService {
             String newClonePath = (String) cloneResult.get("directory");
             log.info("Cloned to new directory: {}", newClonePath);
 
+            if (oldClonePath != null && !oldClonePath.isBlank()) {
+                deleteOldCloneDirectory(oldClonePath);
+                log.info("Deleted old clone directory before new clone: {}", oldClonePath);
+            }
+
             // 6. สร้าง Sonar script
             String projectType = detectProjectType(newClonePath);
             log.info("Detected project type: {}", projectType);
+
 
             Path scriptPath = createSonarScriptByType(
                     newClonePath,
@@ -139,24 +135,18 @@ public class ScanService {
             // 7. อัพเดท clonePath ใน database
             updateProjectClonePath(projectId, newClonePath);
 
-            // 8. ลบ folder เก่า
-            if (oldClonePath != null && !oldClonePath.isBlank()) {
-                deleteOldCloneDirectory(oldClonePath);
-            }
-
             // 9. รัน Sonar Analysis พร้อมเขียน log ลงไฟล์
-            Map<String, Object> scanResult = runSonarAnalysis(
-                    newClonePath,
-                    logFilePath,
-                    scanId
-            );
+            Map<String, Object> scanResult = runSonarAnalysis(newClonePath, logFilePath, scanId);
 
             // 🔥 ดึง analysisId จาก SonarQube ทันที
             if (scanResult.get("success").equals(true)) {
-                String analysisId = fetchLatestAnalysisId(sonarProjectKey);
+                // Poll หา analysisId พร้อม retry
+                String analysisId = pollForAnalysisId(sonarProjectKey, 30); // timeout 30 วินาที
                 if (analysisId != null) {
                     scan.setAnalysisId(analysisId);
-                    log.info("✅ Set analysisId: {} for scanId: {}", analysisId, scanId);
+                    log.info("✅ เซ็ต analysisId ไว้ล่วงหน้า: {} สำหรับ scanId: {}", analysisId, scanId);
+                } else {
+                    log.warn("⚠️ ไม่สามารถดึง analysisId ได้ภายในเวลาที่กำหนด");
                 }
             }
 
@@ -174,6 +164,8 @@ public class ScanService {
             scanRepository.save(scan);
 
             log.info("✅ Scan completed: scanId={}, status={}", scanId, scan.getStatus());
+            log.info("🔍 DEBUG: หลัง save analysisId - scanId={}, analysisId={}, status={}",
+                    scan.getScanId(), scan.getAnalysisId(), scan.getStatus());
 
             // 11. Return result
             Map<String, Object> result = new LinkedHashMap<>();
@@ -194,23 +186,30 @@ public class ScanService {
         } catch (Exception e) {
             log.error("Scan failed for project: {}", projectId, e);
 
-            // อัพเดท status เป็น FAILED
-            scan.setCompletedAt(LocalDateTime.now());
-            scan.setStatus("FAILED");
-            scanRepository.save(scan);
+            // ลบ scan record ที่ล้มเหลว
+            if (scan != null && scan.getScanId() != null) {
+                try {
+                    scanRepository.delete(scan);
+                    log.info("Deleted failed scan: {}", scan.getScanId());
+                } catch (Exception deleteEx) {
+                    log.error("Failed to delete scan", deleteEx);
+                }
+            }
 
             // เขียน error ลงไฟล์ log
-            try {
-                Files.createDirectories(logFilePath.getParent());
-                Files.writeString(logFilePath,
-                        String.format("=== SCAN FAILED ===\n%s\n%s\n%s\n",
-                                LocalDateTime.now(),
-                                e.getClass().getSimpleName(),
-                                e.getMessage()),
-                        StandardCharsets.UTF_8,
-                        StandardOpenOption.CREATE,
-                        StandardOpenOption.APPEND);
-            } catch (IOException ignored) {}
+            if (logFilePath != null) {
+                try {
+                    Files.createDirectories(logFilePath.getParent());
+                    Files.writeString(logFilePath,
+                            String.format("=== SCAN FAILED ===\n%s\n%s\n%s\n",
+                                    LocalDateTime.now(),
+                                    e.getClass().getSimpleName(),
+                                    e.getMessage()),
+                            StandardCharsets.UTF_8,
+                            StandardOpenOption.CREATE,
+                            StandardOpenOption.APPEND);
+                } catch (IOException ignored) {}
+            }
 
             throw new RuntimeException("Scan failed: " + e.getMessage(), e);
         }
@@ -321,24 +320,6 @@ public class ScanService {
         }
     }
 
-    /**
-     * ลบ directory แบบ recursive
-     */
-    private void deleteDirectory(Path path) throws IOException {
-        if (Files.isDirectory(path)) {
-            try (var stream = Files.list(path)) {
-                stream.forEach(child -> {
-                    try {
-                        deleteDirectory(child);
-                    } catch (IOException e) {
-                        log.error("Failed to delete: {}", child, e);
-                    }
-                });
-            }
-        }
-        Files.deleteIfExists(path);
-    }
-
     private String fetchLatestAnalysisId(String projectKey) {
         try {
             // เรียก SonarQube API เพื่อดึง analysis ล่าสุด
@@ -381,9 +362,9 @@ public class ScanService {
         log.info("Running Sonar analysis for scan: {}", scanId);
         log.info("Script path: {}", scriptPath);
 
-        List<String> command = Arrays.asList(
+        List<String> command = List.of(
                 "cmd.exe", "/c",
-                scriptPath.toString()
+                "\"" + scriptPath.toString() + "\""
         );
 
         try {
@@ -547,6 +528,38 @@ public class ScanService {
                 }
             }
         }
+    }
+
+    private String pollForAnalysisId(String projectKey, int timeoutSeconds) {
+        long endTime = System.currentTimeMillis() + (timeoutSeconds * 1000L);
+        int attempt = 0;
+
+        while (System.currentTimeMillis() < endTime) {
+            attempt++;
+            try {
+                String analysisId = fetchLatestAnalysisId(projectKey);
+                if (analysisId != null && !analysisId.isBlank()) {
+                    log.info("✅ พบ analysisId ในครั้งที่ {}: {}", attempt, analysisId);
+                    return analysisId;
+                }
+
+                if (attempt == 1) {
+                    log.info("🔄 กำลังรอ analysisId จาก SonarQube...");
+                }
+
+                Thread.sleep(2000); // รอ 2 วินาที
+
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                log.warn("⚠️ Polling ถูกขัดจังหวะ");
+                return null;
+            } catch (Exception e) {
+                log.error("❌ Error polling analysisId (attempt {}): {}", attempt, e.getMessage());
+            }
+        }
+
+        log.error("⏰ Timeout: ไม่พบ analysisId หลังจาก {} วินาที", timeoutSeconds);
+        return null;
     }
 
 
